k3s/manifests/linkwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  type: ClusterIP
  selector:
    app: linkwarden
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
